--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             align-items: center;
             justify-content: center;
             position: relative;
-            overflow: hidden;
             color: #333;
+            overflow-x: hidden;
         }
 
         /* Floating hearts background */
@@ -32,14 +32,14 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-            z-index: 1;
+            z-index: 0;
         }
 
         .container {
             position: relative;
-            z-index: 10;
+            z-index: 100;
             text-align: center;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.98);
             padding: 60px;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
