Fix: Replace with custom SVG Rocket League gameplay illustrations

--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
             
             <div class="rl-gallery">
                 <div class="rl-card">
-                    <img src="images/rl1.jpg" alt="Epic Rocket League Moment" loading="lazy"/>
+                    <img src="images/rl1.svg" alt="Epic Rocket League Moment" loading="lazy"/>
                 </div>
                 <div class="rl-card">
-                    <img src="images/rl2.jpg" alt="Rocket League Gameplay" loading="lazy"/>
+                    <img src="images/rl2.svg" alt="Rocket League Goal!" loading="lazy"/>
                 </div>
                 <div class="rl-card">
-                    <img src="images/rl3.jpg" alt="Amazing Rocket League Play" loading="lazy"/>
+                    <img src="images/rl3.svg" alt="Intense Rocket League Play" loading="lazy"/>
                 </div>
             </div>
 
